3. Удаление дубликатов
Есть список:

List<Integer> numbers = List.of(1, 2, 2, 3, 3, 3, 4);

Задача:

получить список уникальных чисел

Ожидаемый результат:

[1, 2, 3, 4]