@@ -1,15 +1,14 @@
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Main {
 
     public static void main(String[] args) {
-        List<Integer> numbers = List.of(1, 2, 3, 4, 5);
+        List<Integer> numbers = List.of(1, 2, 2, 3, 3, 3, 4);
 
-        List<Integer> result =
-        numbers.stream()
-                .map(n -> n * 2)
-                .toList();
+        List<Integer> result = numbers.stream()
+                .distinct()
+                .collect(Collectors.toList());
         System.out.println(result);
-
     }
 }
